# 1brc

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  main.rs  solver.rs
