[package]
name = "one_billion_rows_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
rayon = "1.10.0"
indicatif = "0.17.8"
dotenvy = "0.15.7"
bstr = "1.9.1"
memmap = "0.7.0"
rustc-hash = { version = "1.1.0" }
fast-float = "0.2.0"
memchr = "2.7.2"
hashbrown = "0.14.3"
prettytable-rs = "^0.10"
round = "0.1.2"
async-std = "1.12.0"
